src/bindings.h

  /// Get the decoded time range of the pull buffer stream.
  /// [startTime] returns the start time in seconds of the decoded buffer.
  /// [endTime] returns the end time in seconds of the decoded buffer.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  getPullBufferTimeRange(unsigned int hash, double *startTime,
                         double *endTime);
  FFI_PLUGIN_EXPORT enum PlayerErrors
  addAudioDataStream(unsigned int hash, const unsigned char *data,
                     unsigned int aDataLen);
  /// Set the end of the data stream.
  /// [hash] the hash of the stream sound.
  FFI_PLUGIN_EXPORT enum PlayerErrors setDataIsEnded(unsigned int hash);
  /// Get the current buffer size in bytes of this sound with hash [hash].
  /// [hash] the hash of the stream sound.
  FFI_PLUGIN_EXPORT enum PlayerErrors getBufferSize(unsigned int hash,
                                                    unsigned int *sizeInBytes);
  /// Load a new waveform to be played once or multiple times later
  ///
  /// [waveform]  WAVE_SQUARE = 0,
  ///             WAVE_SAW,
  ///             WAVE_SIN,
  ///             WAVE_TRIANGLE,
  ///             WAVE_BOUNCE,
  ///             WAVE_JAWS,
  ///             WAVE_HUMPS,
  ///             WAVE_FSQUARE,
  ///             WAVE_FSAW
  /// [superWave]
  /// [scale]
  /// [detune]
  /// [hash] return hash of the sound
  /// Returns [PlayerErrors.noError] if success
  FFI_PLUGIN_EXPORT enum PlayerErrors loadWaveform(int waveform,
                                                   bool superWave, float scale,
                                                   float detune,
                                                   unsigned int *hash);
  /// Set the scale of an already loaded waveform identified by [hash]
  ///
  /// [hash] the unique sound hash of a waveform sound
  /// [newScale]
  FFI_PLUGIN_EXPORT void setWaveformScale(unsigned int hash, float newScale);
  /// Set the detune of an already loaded waveform identified by [hash]
  ///
  /// [hash] the unique sound hash of a waveform sound
  /// [newDetune]
  FFI_PLUGIN_EXPORT void setWaveformDetune(unsigned int hash, float newDetune);
  /// Set a new frequency of an already loaded waveform identified by [hash]
  ///
  /// [hash] the unique sound hash of a waveform sound
  /// [newFreq]
  FFI_PLUGIN_EXPORT void setWaveformFreq(unsigned int hash, float newFreq);
  /// Set a new frequence of an already loaded waveform identified by [hash]
  ///
  /// [hash] the unique sound hash of a waveform sound
  /// [superwave]
  FFI_PLUGIN_EXPORT void setSuperWave(unsigned int hash, bool superwave);
  /// Set a new wave form of an already loaded waveform identified by [hash]
  ///
  /// [hash] the unique sound hash of a waveform sound
  /// [newWaveform]   WAVE_SQUARE = 0,
  ///                 WAVE_SAW,
  ///                 WAVE_SIN,
  ///                 WAVE_TRIANGLE,
  ///                 WAVE_BOUNCE,
  ///                 WAVE_JAWS,
  ///                 WAVE_HUMPS,
  ///                 WAVE_FSQUARE,
  ///                 WAVE_FSAW
  FFI_PLUGIN_EXPORT void setWaveform(unsigned int hash, int newWaveform);
  /// Speech the text given
  ///
  /// [textToSpeech]
  /// Returns [PlayerErrors.noError] if success and [handle] sound identifier
  FFI_PLUGIN_EXPORT enum PlayerErrors speechText(char *textToSpeech,
                                                 unsigned int *handle);
  //////////////////////////////////////////////////////////////
  /// Voice control

  /// Switch pause state for an already loaded sound identified by [handle]
  ///
  /// [handle] the sound handle
  /// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
  /// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
  /// [handle] is not valid. Unpausing posts an asynchronous device start, so
  /// this never reports [PlayerErrors.audioDeviceFailedToStart].
  FFI_PLUGIN_EXPORT enum PlayerErrors pauseSwitch(unsigned int handle);
  /// Pause or unpause already loaded sound identified by [handle]
  ///
  /// [handle] the sound handle
  /// [pause] the sound handle
  /// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
  /// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
  /// [handle] is not valid. Unpausing posts an asynchronous device start, so
  /// this never reports [PlayerErrors.audioDeviceFailedToStart].
  FFI_PLUGIN_EXPORT enum PlayerErrors setPause(unsigned int handle,
                                               bool pause);
  /// Gets the pause state
  ///
  /// [handle] the sound handle
  /// Return true if paused
  FFI_PLUGIN_EXPORT int getPause(unsigned int handle);
  /// Set a sound's relative play speed.
  /// Setting the value to 0 will cause undefined behavior, likely a crash.
  /// Change the relative play speed of a sample. This changes the effective
  /// sample rate while leaving the base sample rate alone.
  ///
  /// Note that playing a sound at a higher sample rate will require SoLoud
  /// to request more samples from the sound source, which will require more
  /// memory and more processing power. Playing at a slower sample rate
  /// is cheaper.
  ///
  /// [handle] the sound handle
  /// [speed] the new speed
  FFI_PLUGIN_EXPORT void setRelativePlaySpeed(unsigned int handle,
                                              float speed);
  /// Get a sound's relative play speed.
  /// If an invalid handle is given to getRelativePlaySpeed, it will return 1.
  ///
  /// [handle] the sound handle
  /// Return the current play speed.
  FFI_PLUGIN_EXPORT float getRelativePlaySpeed(unsigned int handle);
  /// Gets the approximate volume for output per output channel (i.e, per
  /// speaker).
  ///
  /// [channel] the channel.
  /// Return zero for invalid parameters.
  FFI_PLUGIN_EXPORT float getApproximateVolume(unsigned int channel);
  /// Play already loaded sound identified by [hash]
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [paused] 0 not paused
  /// [looping] whether to start the sound in looping state.
  /// [loopingStartAt] If looping is enabled, the loop point is, by default,
  /// the start of the stream. The loop start point can be set with this
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [scale] relative playback speed multiplier (1.0f = normal speed).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors play(
      unsigned int soundHash, unsigned int busId, float volume, float pan,
      bool paused, bool looping, double loopingStartAt, double loopingEndAt,
      int loopingStartOffsetAt, int loopingEndOffsetAt, float scale,
      unsigned int *handle);
  /// Variant of [play] that takes an additional parameter, the time offset
  /// for the sound.
  ///
  /// While the vanilla [play] tries to play sounds as soon as possible,
  /// [playClocked] will delay the start of sounds so that rapidly launched
  /// sounds don't all get clumped to the start of the next outgoing sound
  /// buffer.
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [soundTime] your app's "physics time", in seconds. SoLoud will use that
  /// time (as well as the time previously used) to calculate the delay
  /// between two sound effects.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [scale] relative playback speed multiplier (1.0f = normal speed).
  /// [looping] whether the sound loops upon reaching the end.
  /// [loopingStartAt] time position in seconds to restart playback when
  /// looping.
  /// [loopingEndAt] If greater than zero, loop before this time.
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors playClocked(
      unsigned int soundHash, double soundTime, unsigned int busId,
      float volume, float pan, float scale, bool looping,
      double loopingStartAt, double loopingEndAt, int loopingStartOffsetAt,
      int loopingEndOffsetAt, unsigned int *handle);
  /// Set the number of samples to delay before starting to play a sound.
  ///
  /// This is used internally by [playClocked]. In the unlikely event that
  /// you may want to use it manually, it's available here. Note that calling
  /// this on a "live" voice will cause silence to be inserted at the start
  /// of the next audio buffer.
  ///
  /// [handle] the sound handle
  /// [samples] the number of samples to delay the sound with
  FFI_PLUGIN_EXPORT void setDelaySamples(unsigned int handle,
                                         unsigned int samples);
  /// Get the current stream time of a voice, in seconds.
  ///
  /// [handle] the sound handle
  /// Return the stream time in seconds. 0 if [handle] is invalid.
  FFI_PLUGIN_EXPORT double getStreamTime(unsigned int handle);