lib/src/bindings/flutter_soloud_ffigen.dart


PlayerErrors getPullBufferTimeRange(
  int hash,
  ffi.Pointer<ffi.Double> startTime,
  ffi.Pointer<ffi.Double> endTime,
) => PlayerErrors.fromValue(_getPullBufferTimeRange(hash, startTime, endTime));

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UnsignedInt,
  )
>(symbol: 'addAudioDataStream')
external int _addAudioDataStream(
  int hash,
  ffi.Pointer<ffi.UnsignedChar> data,
  int aDataLen,
);

PlayerErrors addAudioDataStream(
  int hash,
  ffi.Pointer<ffi.UnsignedChar> data,
  int aDataLen,
) => PlayerErrors.fromValue(_addAudioDataStream(hash, data, aDataLen));

/// Set the end of the data stream.
/// [hash] the hash of the stream sound.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>(symbol: 'setDataIsEnded')
external int _setDataIsEnded(int hash);

PlayerErrors setDataIsEnded(int hash) =>
    PlayerErrors.fromValue(_setDataIsEnded(hash));

/// Get the current buffer size in bytes of this sound with hash [hash].
/// [hash] the hash of the stream sound.
@ffi.Native<
  ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Pointer<ffi.UnsignedInt>)
>(symbol: 'getBufferSize')
external int _getBufferSize(int hash, ffi.Pointer<ffi.UnsignedInt> sizeInBytes);

PlayerErrors getBufferSize(
  int hash,
  ffi.Pointer<ffi.UnsignedInt> sizeInBytes,
) => PlayerErrors.fromValue(_getBufferSize(hash, sizeInBytes));

/// Load a new waveform to be played once or multiple times later
///
/// [waveform]  WAVE_SQUARE = 0,
/// WAVE_SAW,
/// WAVE_SIN,
/// WAVE_TRIANGLE,
/// WAVE_BOUNCE,
/// WAVE_JAWS,
/// WAVE_HUMPS,
/// WAVE_FSQUARE,
/// WAVE_FSAW
/// [superWave]
/// [scale]
/// [detune]
/// [hash] return hash of the sound
/// Returns [PlayerErrors.noError] if success
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Int,
    ffi.Bool,
    ffi.Float,
    ffi.Float,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'loadWaveform')
external int _loadWaveform(
  int waveform,
  bool superWave,
  double scale,
  double detune,
  ffi.Pointer<ffi.UnsignedInt> hash,
);

PlayerErrors loadWaveform(
  int waveform,
  bool superWave,
  double scale,
  double detune,
  ffi.Pointer<ffi.UnsignedInt> hash,
) => PlayerErrors.fromValue(
  _loadWaveform(waveform, superWave, scale, detune, hash),
);

/// Set the scale of an already loaded waveform identified by [hash]
///
/// [hash] the unique sound hash of a waveform sound
/// [newScale]
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Float)>()
external void setWaveformScale(int hash, double newScale);

/// Set the detune of an already loaded waveform identified by [hash]
///
/// [hash] the unique sound hash of a waveform sound
/// [newDetune]
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Float)>()
external void setWaveformDetune(int hash, double newDetune);

/// Set a new frequency of an already loaded waveform identified by [hash]
///
/// [hash] the unique sound hash of a waveform sound
/// [newFreq]
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Float)>()
external void setWaveformFreq(int hash, double newFreq);

/// Set a new frequence of an already loaded waveform identified by [hash]
///
/// [hash] the unique sound hash of a waveform sound
/// [superwave]
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Bool)>()
external void setSuperWave(int hash, bool superwave);

/// Set a new wave form of an already loaded waveform identified by [hash]
///
/// [hash] the unique sound hash of a waveform sound
/// [newWaveform]   WAVE_SQUARE = 0,
/// WAVE_SAW,
/// WAVE_SIN,
/// WAVE_TRIANGLE,
/// WAVE_BOUNCE,
/// WAVE_JAWS,
/// WAVE_HUMPS,
/// WAVE_FSQUARE,
/// WAVE_FSAW
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Int)>()
external void setWaveform(int hash, int newWaveform);

/// Speech the text given
///
/// [textToSpeech]
/// Returns [PlayerErrors.noError] if success and [handle] sound identifier
@ffi.Native<
  ffi.UnsignedInt Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.UnsignedInt>)
>(symbol: 'speechText')
external int _speechText(
  ffi.Pointer<ffi.Char> textToSpeech,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors speechText(
  ffi.Pointer<ffi.Char> textToSpeech,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(_speechText(textToSpeech, handle));

/// Switch pause state for an already loaded sound identified by [handle]
///
/// [handle] the sound handle
/// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
/// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
/// [handle] is not valid. Unpausing posts an asynchronous device start, so
/// this never reports [PlayerErrors.audioDeviceFailedToStart].
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>(symbol: 'pauseSwitch')
external int _pauseSwitch(int handle);

PlayerErrors pauseSwitch(int handle) =>
    PlayerErrors.fromValue(_pauseSwitch(handle));

/// Pause or unpause already loaded sound identified by [handle]
///
/// [handle] the sound handle
/// [pause] the sound handle
/// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
/// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
/// [handle] is not valid. Unpausing posts an asynchronous device start, so
/// this never reports [PlayerErrors.audioDeviceFailedToStart].
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Bool)>(
  symbol: 'setPause',
)
external int _setPause(int handle, bool pause);

PlayerErrors setPause(int handle, bool pause) =>
    PlayerErrors.fromValue(_setPause(handle, pause));

/// Gets the pause state
///
/// [handle] the sound handle
/// Return true if paused
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>()
external int getPause(int handle);

/// Set a sound's relative play speed.
/// Setting the value to 0 will cause undefined behavior, likely a crash.
/// Change the relative play speed of a sample. This changes the effective
/// sample rate while leaving the base sample rate alone.
///
/// Note that playing a sound at a higher sample rate will require SoLoud
/// to request more samples from the sound source, which will require more
/// memory and more processing power. Playing at a slower sample rate
/// is cheaper.
///
/// [handle] the sound handle
/// [speed] the new speed
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Float)>()
external void setRelativePlaySpeed(int handle, double speed);

/// Get a sound's relative play speed.
/// If an invalid handle is given to getRelativePlaySpeed, it will return 1.
///
/// [handle] the sound handle
/// Return the current play speed.
@ffi.Native<ffi.Float Function(ffi.UnsignedInt)>()
external double getRelativePlaySpeed(int handle);

/// Gets the approximate volume for output per output channel (i.e, per
/// speaker).
///
/// [channel] the channel.
/// Return zero for invalid parameters.
@ffi.Native<ffi.Float Function(ffi.UnsignedInt)>()
external double getApproximateVolume(int channel);

/// Play already loaded sound identified by [hash]
///
/// [soundHash] the unique sound hash of a sound
/// [busId] the bus ID to play the sound on. 0 means the main engine.
/// [volume] 1.0f full volume
/// [pan] 0.0f centered
/// [paused] 0 not paused
/// [looping] whether to start the sound in looping state.
/// [loopingStartAt] If looping is enabled, the loop point is, by default,
/// the start of the stream. The loop start point can be set with this
/// [loopingStartOffsetAt] Optional exact frame offset to restart looping
/// from (-1 = inactive).
/// [loopingEndOffsetAt] Optional exact frame offset to loop before
/// (-1 = inactive).
/// [scale] relative playback speed multiplier (1.0f = normal speed).
/// [handle] pointer to the handle for this new sound
/// Return the error if any and a new [handle] of this sound
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Bool,
    ffi.Bool,
    ffi.Double,
    ffi.Double,
    ffi.Int,
    ffi.Int,
    ffi.Float,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'play')
external int _play(
  int soundHash,
  int busId,
  double volume,
  double pan,
  bool paused,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  double scale,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors play(
  int soundHash,
  int busId,
  double volume,
  double pan,
  bool paused,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  double scale,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(
  _play(
    soundHash,
    busId,
    volume,
    pan,
    paused,
    looping,
    loopingStartAt,
    loopingEndAt,
    loopingStartOffsetAt,
    loopingEndOffsetAt,
    scale,
    handle,
  ),
);

/// Variant of [play] that takes an additional parameter, the time offset
/// for the sound.
///
/// While the vanilla [play] tries to play sounds as soon as possible,
/// [playClocked] will delay the start of sounds so that rapidly launched
/// sounds don't all get clumped to the start of the next outgoing sound
/// buffer.
///
/// [soundHash] the unique sound hash of a sound
/// [soundTime] your app's "physics time", in seconds. SoLoud will use that
/// time (as well as the time previously used) to calculate the delay
/// between two sound effects.
/// [volume] 1.0f full volume
/// [pan] 0.0f centered
/// [busId] the bus ID to play the sound on. 0 means the main engine.
/// [scale] relative playback speed multiplier (1.0f = normal speed).
/// [looping] whether the sound loops upon reaching the end.
/// [loopingStartAt] time position in seconds to restart playback when
/// looping.
/// [loopingEndAt] If greater than zero, loop before this time.
/// [loopingStartOffsetAt] Optional exact frame offset to restart looping
/// from (-1 = inactive).
/// [loopingEndOffsetAt] Optional exact frame offset to loop before
/// (-1 = inactive).
/// [handle] pointer to the handle for this new sound
/// Return the error if any and a new [handle] of this sound
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Double,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Bool,
    ffi.Double,
    ffi.Double,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'playClocked')
external int _playClocked(
  int soundHash,
  double soundTime,
  int busId,
  double volume,
  double pan,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors playClocked(
  int soundHash,
  double soundTime,
  int busId,
  double volume,
  double pan,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(
  _playClocked(
    soundHash,
    soundTime,
    busId,
    volume,
    pan,
    scale,
    looping,
    loopingStartAt,
    loopingEndAt,
    loopingStartOffsetAt,
    loopingEndOffsetAt,
    handle,
  ),
);

/// Set the number of samples to delay before starting to play a sound.
///
/// This is used internally by [playClocked]. In the unlikely event that
/// you may want to use it manually, it's available here. Note that calling
/// this on a "live" voice will cause silence to be inserted at the start
/// of the next audio buffer.
///
/// [handle] the sound handle
/// [samples] the number of samples to delay the sound with
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.UnsignedInt)>()
external void setDelaySamples(int handle, int samples);

/// Get the current stream time of a voice, in seconds.
///
/// [handle] the sound handle
/// Return the stream time in seconds. 0 if [handle] is invalid.
@ffi.Native<ffi.Double Function(ffi.UnsignedInt)>()
external double getStreamTime(int handle);
